fix game card being too big; fix low-res thumbnails when searching for games

--- a/src/css/cards.sass
+++ b/src/css/cards.sass
@@ -1,16 +1,15 @@
 .media-container
     display: grid
     grid-template-rows: 1fr
-    grid-gap: 8px
+    grid-gap: 6px
     grid-template-columns: repeat(auto-fill, minmax(var(--col-size), 1fr))
-    padding: 8px
+    padding: 6px
 
     &.stream,&.video,&.clip
         --col-size: 250px
         --image-padding: 56.25%
     &.game
-        --col-size: 136px
-        // This gets too big TODO
+        --col-size: 125px
         --image-padding: 139.7%
     &.channel
         // todo
